Z-index fixes so that mouse events work with FireFox.

--- a/public/styles/main/radiant.css
+++ b/public/styles/main/radiant.css
@@ -2,12 +2,13 @@
 
 @import url('http://fonts.googleapis.com/css?family=Open Sans&subset=latin');
 
-#layout {
+#layout > canvas {
 	bottom: 0;
 	left: 0;
 	position: absolute;
 	right: 0;
 	top: 0;
+	z-index: 1;
 }
 
 #layout div.viewport {
@@ -15,7 +16,6 @@
 	height: 50%;
 	position: absolute;
 	width: 50%;
-	z-index: 1;
 }
 
 #layout.classic div.viewport.perspective {
@@ -51,7 +51,7 @@
 	top: 0;
 	position: absolute;
 	right: 0;
-	z-index: 2
+	z-index: 2;
 }
 
 button {
